--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: cn.research@outlook.com
 description: >-
   Strategic insights and implementation frameworks for AI-enhanced cybersecurity operations, from concept to deployment.
 github_username: CyberDoc88
-minimal_mistakes_skin: default
+minimal_mistakes_skin: air
 search: true
 
 # Build Settings
