--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,7 @@ defaults:
       path: ""
       type: posts
     values:
+      head: head-custom.html
       layout: single
       author_profile: false
       read_time: true
